V 3.3.5
* features
- foreground/background profile switches are configurable (default: background)
* bug fixes
- fix insert new virtual governor does not save the governor
- remove profile switch governor settings since it only yielded troubles

V 3.3.4
* features
- show deep sleep in adv stats 
- change font size of widget
- display temperature in °C, °F or K
- translation updates
* bug fixes
- errors
 
V 3.3.3
* features
- 
* bug fixes
- update small widget
- fix notification setting
- fix crashes

V 3.3.2
* features
- smaller widget and a new tiny widget
- log start and stop in switchlog
- clear all power usage from menu
* bug fixes
- prevent background process from being killed (if notification is shown)
- fix capabilities check
- fix crashes

V 3.3.1
* features
- display help icon on main screen
* bug fixes
- fix crash on editor close
- launch market if superuser is not installed
- fix crashes

V 3.3.0 
* features
- Japanese translation (by Sunatomo)
- a widget (as extension)
- switch services from current tab
- show battery level in notification
- track power consumption in battery % per hour (beta and not quite working)
- translated (de, it and ja) trigger, profile and virtual governor names (on system configuration load)
- lots minor changes
* bug fixes
- fix profile "none" after manual profile changes
- fix crashes

V 3.2.2
* features
- 
* bug fixes
- fix context menu in lists
- fix governor description on load
- allow export of switch log to capabilities check mail

V 3.2.1
* features
- Italian translation (by Rino)
- minor layout optimisations
* bug fixes
- fix refresh not working after orientation change
- rare crash

V 3.2.0
* features
- optimise layout for ice cream sandwich (android 4)
- speedup profile switches
- new advanced statistics that allow filtering
- allow special cpu setting during profile switch
- settings for extensions
* bug fixes
- use added configuration as the current one
- cpufreq files not found in some kernels