@@ -1,9 +1,11 @@
 V 3.3.5
 * features
 - foreground/background profile switches are configurable (default: background)
+- option to hide widget labels
 * bug fixes
 - fix insert new virtual governor does not save the governor
 - remove profile switch governor settings since it only yielded troubles
+- do not switch off CPUs by default 
 
 V 3.3.4
 * features
